fixed last minute page layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --cs-brown: #685155;
     --cs-light: #02586a;
     --cs-blue: #020024;
-    --cs-lightgreen: #516b2f;
+    --cs-lightgreen: #9acc58;
 }
 
 html,body {
@@ -13,6 +13,7 @@ html,body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     font-family: 'Nova Square', sans-serif;
 }
 
@@ -25,13 +26,16 @@ p, pre {
 nav {
     background-color: var(--cs-dark);
 }
+
 .navbar-toggler {
     position: relative;
     top: 3px;
 }
+
 #menu-bar {
     transition: transform 0.3s ease-in-out;
 }
+
 #menu-bar:hover {
     transform: scale(1.1);
     background-image: linear-gradient(180deg, var(--cs-dark) 0%, var(--cs-light) 50%, var(--cs-dark) 100%);
@@ -51,24 +55,29 @@ nav {
 #contact_image {
     color: #f0f0f0;
 }
+
 #chat_box {
     transition: transform 0.3s ease-in-out;
 }
+
 #chat_box:hover {
     transform: scale(1.3);
 
 }
+
 .chatbox-icon-button {
     background-color: transparent;
     border: none;
     padding: 0;
 }
+
 .email{
     color: var(--cs-grey);
     background-color: #ffffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
+
 .email .modal-header {
     border-bottom: none;
 }
@@ -105,6 +114,7 @@ nav {
 .email .btn-dark:hover {
     background-image: linear-gradient(180deg, var(--cs-dark) 0%, var(--cs-light) 50%, var(--cs-dark) 100%);
 }
+
 /*Colors and styles for each section*/
 
 .hero {
@@ -159,6 +169,7 @@ a:hover #down {
 .school-projects {
     background-image: linear-gradient(180deg, var(--cs-dark) 0%, var(--cs-light) 50%, var(--cs-dark) 100%);
 }
+
 .school-projects {
     position: relative;
     top: 75px;
